--- a/dice game/dicee.html
+++ b/dice game/dicee.html
@@ -24,7 +24,9 @@
       <img class="img2" src="images/dice6.png">
     </div>
 
-    <h1 id="small-text">Refresh to play again</h1>
+    <a href="">
+      <h1 id="small-text">Click here to play again !</h1>
+    </a>
 
   </div>
 
